[package]
name = "nist-drbg-rs"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["drbg", "csprng", "nist"]
categories = ["cryptography"]
authors = [
    "Sam Leonard <tritoke@protonmail.com>",
]
description = "Implementation of NIST SP 800-90A Rev. 1 for Deterministic Random Bit Generators"

[features]
default = ["hash-drbg"]
hash-drbg = ["sha1", "sha2"]
sha1 = ["dep:sha1", "dep:digest"]
sha2 = ["dep:sha2", "dep:digest"]

[dependencies]
digest = { version = "0.10", optional = true }
sha1 = { version = "0.10", default-features = false, optional = true }
sha2 = { version = "0.10", default-features = false, optional = true }
